Updated to latest meta data for songlength etc. Other small fixes. Bumped version. RC

--- a/app/src/main/assets/templates/def.html
+++ b/app/src/main/assets/templates/def.html
@@ -33,7 +33,7 @@ ${if channels}
 ${end}
 
 ${if instruments}
-<span class="heading">Intruments</span>
+<span class="heading">Instruments</span>
 <span class="comment">
 ${foreach instruments item}${item.index2} : ${item.text}<br/>${end}
 </span>
